--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   location: ^4.4.0
   permission_handler: ^10.0.0
   image_picker: ^0.8.5+3
+  flutter_acpuserprofile: ^2.0.1
+  user_profile: ^0.1.27-nullsafety
+
 
 dev_dependencies:
   flutter_test:
